Closed Bug 647559 Opened 13 years ago Closed 13 years ago

TI: Assertion failure: (strBits >> JSVAL_TAG_SHIFT) == 0, at ../jsval.h:632

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Unassigned)

References

Details

(Keywords: assertion, testcase)

The following code asserts on TI tip (run with -m -n -a), tested on 64 bit:

var UBound = 0;
var actualvalues = [ ];
var expect= '';
var expectedvalues = [ ];
addThis();
Object.defineProperty(Object.prototype, "name",
{
  get: function() {this.nameGETS++ }
})
expectedvalues.name( actual );
function addThis() {
  expectedvalues[UBound] = expect.toString()
}


Testcase was not stable under minimization and switched asserts/crashed, I assume this is a memory corruption.
Yeah, this is corruption from a use of the CALLPROP IC after it has been destroyed from a nested recompilation.  I could swear I've fixed this exact bug before, need to pay more attention during merges I think.

http://hg.mozilla.org/projects/jaegermonkey/rev/df76ed3fb875
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.