[INFER] Fix (again) use of CALLPROP ic after it may have been destroyed, bug 647559.