js/src/methodjit/PolyIC.cpp
@@ -1952,7 +1952,7 @@ ic::CallProp(VMFrame &f, ic::PICInfo *pic)
 
 #if JS_HAS_NO_SUCH_METHOD
     if (JS_UNLIKELY(rval.isUndefined()) && regs.sp[-1].isObject()) {
-        regs.sp[-2].setString(pic->atom);
+        regs.sp[-2].setString(JSID_TO_STRING(id));
         if (!js_OnUnknownMethod(cx, regs.sp - 2))
             THROW();
     }
